src/styles/scss/app.scss
@import '../../../node_modules/@blueprintjs/core/lib/scss/variables.scss';

#root,
body,
html {
  min-height: 100%;
  margin: 0;
  padding: 0;
  color: #fff;
  font-size: 14px;
}
*:focus {
  outline: none;
}
input::placeholder {
  text-align: center;
}

a {
  color: #fff;
  text-decoration: none;
}

a:hover {
  color: #fff;
  text-decoration: none;
  cursor: pointer;
}
input[type='button']:hover {
  background-color: #17eef4;
  color: black;
}

.bp3-button {
  box-shadow: none !important;
  background-color: #30313b !important;
  background-image: none !important;
  color: #fff !important;
  font-size: 14px !important;
}
.bp3-icon {
  color: #fff !important;
}
.bp3-popover-content,
.bp3-menu {
  background: #424552 !important;
  color: #fff;
}
.bp3-menu-item.bp3-intent-primary.bp3-active {
  background-color: #3d83ee !important;
}
.bp3-card {
  background-color: #3d404d !important;
}
.bp3-callout {
  font-size: 11px !important;
}
.react-stockcharts-current-coordinate {
  border: 1px #fff solid !important;
  fill: '#fff';
}
.react-stockchart {
  overflow: visible;
}
.bp3-card {
  border-radius: 0 !important;
}
#tree-map-tooltip {
  display: none;
  justify-content: space-between;
  position: absolute;
  width: 300px;
  height: 120px;
  padding: 20px;
  font-size: 14px;
  background: #262830;
  pointer-events: none;
}
.tree-map-title {
  font-size: 10px;
  color: rgba(255, 255, 255, 0.52);
}
.tree-map-box {
  display: flex;
  flex-direction: column;
}
.tree-map-row {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
$m: 0;
.canvas {
  position: relative;
  width: calc(100% - #{$m} * 2 * 1px);
  height: calc(100% - #{$m} * 2 * 1px);
  margin: $m * 1px;
  //background: #aaa;
  //overflow: hidden;
}
.node {
  position: absolute;
}

